modify progressbar in index

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 
 				<div class="bs_example">
 					<div id="instance_progressBar">
+						<div id="btn_progress">click me</div>
 						<div id="instance_progress1"></div>
 						<div id="instance_progress2"></div>
 					</div>
